Bug 116865 - Sidebar not functional after opening new window (gtk2)
Summary: Sidebar not functional after opening new window (gtk2)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.1.0 target:6.0.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar
  Show dependency treegraph
 
Reported: 2018-04-07 18:42 UTC by Yousuf Philips (jay) (retired)
Modified: 2018-04-17 08:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (2.05 MB, video/webm)
2018-04-09 22:00 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2018-04-07 18:42:01 UTC
Steps:
1. open a document with the sidebar partially open (just the buttons showing)
2. open a new writer file
3. buttons arent appearing in sidebar
4. insert a bullet point and then buttons will appear

Version: 6.1.0.0.alpha0+
Build ID: cab04bc39b5164ea74216cd849c3af5f5b298f79
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 Xisco Faulí 2018-04-07 19:58:39 UTC
I can't reproduce it in

Version: 6.1.0.0.alpha0+
Build ID: b29f801e4106b0c729e90ff7c1b1718b671fd32d
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Could you try it in safe mode?
Comment 2 raal 2018-04-09 11:35:05 UTC
works for me in Version: 6.1.0.0.alpha0+
Build ID: 4f268695787ff6c7052269058f7ae6de34abfd5d
CPU threads: 4; OS: Windows 6.1; UI render: default;
Comment 3 Xisco Faulí 2018-04-09 21:25:24 UTC
Putting to NEEDINFO until Jay tries it again in safe mode...
Comment 4 Yousuf Philips (jay) (retired) 2018-04-09 21:52:44 UTC
Seems like it was already fixed. Updater build not updating properly.

Version: 6.1.0.0.alpha0+
Build ID: 60b98f64f1bbe1117595b939a58fff3db8877896
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 5 Yousuf Philips (jay) (retired) 2018-04-09 21:58:33 UTC
Seems i was mistaken and it does still happen.

steps:
1. open a document with the sidebar partially open (just the buttons showing)
2. open a new writer file and buttons appear in sidebar
3. close new writer file and close opened document to land and start center
4. reopen opened document
5. open a new writer file and buttons arent appearing in sidebar
6. insert a bullet point and then buttons will appear
Comment 6 Yousuf Philips (jay) (retired) 2018-04-09 22:00:07 UTC
Created attachment 141237 [details]
screenshot
Comment 7 Xisco Faulí 2018-04-10 17:03:23 UTC
I can't reproduce it in

Version: 6.1.0.0.alpha0+
Build ID: 0a4c1fb68c3619e61099a7c548f550b0d3fd7a53
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but I can in

Version: 6.1.0.0.alpha0+
Build ID: 0a4c1fb68c3619e61099a7c548f550b0d3fd7a53
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

thus, gtk2 only...
Comment 8 Xisco Faulí 2018-04-10 17:47:19 UTC
I found another way or reproducing it.

1. Open writer in safe mode
2. Open an existing document
3. Open a new document
Comment 9 Xisco Faulí 2018-04-10 18:01:53 UTC
I found an ever easier way to reproduce it:

1. Open a writer document with SAL_USE_VCLPLUGIN=gtk instdir/program/swriter
2. Create a new document
3. Create a new document again

-> Sidebar is empty

Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2017-11-23 14:05:26 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2017-11-24 09:55:17 +0100
commit 6f31670783b3445a8073bd49fe4c041b655e91b3 (patch)
tree 3cbfc77e7f9e8191c6eaded7f92633f9808ba414
parent 99534540df148513fc0bb9622b7285e10b285ccb (diff)
set new document window as parent for dialogs during load
and exit typedetection early and completely if application quits
while detecting

During typedetection, before loading proper, we have the hidden window as
parent so warnings are not modal to existing windows and they are cancelled on
exit.

Once we do have a window, then reinit interaction handler to have that window
as the parent for any further dialogs.

Bisected with: bibisect-linux64-6.0

Adding Cc: to Caolán McNamara
Comment 10 Caolán McNamara 2018-04-11 16:01:43 UTC
very odd that the sidebar is affected in anyway
Comment 11 Caolán McNamara 2018-04-13 08:38:17 UTC
Seems to be a timing issue, sidebar is arranged with the original window size, but the window is resized to full size while this happening. The window arrangement is begun with the original size, during this the new size is noticed and the sidebar is arranged with the new size in an inner arrange, but on return the outer arrange the positioning continues with the old size.
Comment 12 Caolán McNamara 2018-04-13 09:13:11 UTC
I think I have a solution.
Comment 13 Commit Notification 2018-04-13 12:22:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1670f6aaf28907403e5305b78ebcf93de4ebc19b

Resolves: tdf#116865 trigger pending sizing timers before arranging

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Caolán McNamara 2018-04-13 12:23:30 UTC
This seems to work for me anyway
Comment 15 Commit Notification 2018-04-16 12:01:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=32a38bae39661a4c0f08e5e2a9db8c4f1fda462a&h=libreoffice-6-0

Resolves: tdf#116865 trigger pending sizing timers before arranging

It will be available in 6.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Xisco Faulí 2018-04-17 08:11:57 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: b36ea44dcbdb862b0ac6e6cdaf27225b43dc0c7e
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Caolán, Thanks for fixing this!