Resolves: tdf#116865 trigger pending sizing timers before arranging

trigger pending sizing timers now so we arrange with the final size of the
client area

Otherwise calling GetSizePixel in the Arranging loop will trigger the timers
anyway, causing reentry into Arrange_Impl again where the inner Arrange_Impl
arranges with the final size, and then returns to this outer Arrange_Impl which
would rearrange with the old client area size.

Change-Id: Ibc2b97f679ceaa0a825cee015576f403703a5f9e
Reviewed-on: https://gerrit.libreoffice.org/52815
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>